src/test/deca/context/invalid/provided/testi36.deca
class A{
    void groosse(float x, int y, boolean t){}
}
{
    A a = new A();
    a.groosse(2, 2, 1);
}